# libflatarray

./: .appveyor.yml  .hgignore  .hgtags  .travis.yml  AUTHORS  CMakeLists.txt  README  circle.yml  libflatarrayConfig.cmake
.circleci/: config.yml
CMakeModules/: FindSilo.cmake
examples/: CMakeLists.txt
examples/charged_particles/: CMakeLists.txt  main.cpp
examples/gauss/: CMakeLists.txt  filter_c99.c  main.cpp
examples/jacobi/: CMakeLists.txt  main.cpp  update_c99.c
examples/lbm/: CMakeLists.txt  cell.h  cudalineupdatefunctorprototype.h  flatarray_implementation_0.cu  flatarray_implementation_1.cu  flatarray_implementation_10.cu  flatarray_implementation_2.cu  flatarray_implementation_3.cu  flatarray_implementation_4.cu  flatarray_implementation_5.cu  flatarray_implementation_6.cu  flatarray_implementation_7.cu  flatarray_implementation_8.cu  flatarray_implementation_9.cu  generator  main.cu  update_lbm_classic.h  update_lbm_cuda_flat_array.h  update_lbm_object_oriented.h  util.h
examples/performance_tests/: CMakeLists.txt  main.cpp  plot
examples/smoothed_particle_hydrodynamics/: CMakeLists.txt  kernels.c  kernels.h  kernels.hpp  main.c  main.cpp
include/libflatarray/: aggregated_member_size.hpp  aligned_allocator.hpp  alignment.hpp  api_traits.hpp  coord.hpp  cuda_allocator.hpp  cuda_array.hpp  estimate_optimum_short_vec_type.hpp  flat_array.hpp  ilp_to_arity.hpp  loop_peeler.hpp  macros.hpp  member_ptr_to_offset.hpp  preprocessor.hpp  short_vec.hpp  short_vec_base.hpp  soa_array.hpp  soa_grid.hpp  soa_vector.hpp  streaming_short_vec.hpp
include/libflatarray/detail/: construct_functor.hpp  destroy_functor.hpp  disable_system_header_warnings_1.hpp  disable_system_header_warnings_2.hpp  dual_callback_helper.hpp  generate_cuda_launch_config.hpp  generic_destruct.hpp  get_instance_functor.hpp  init_kernel.hpp  load_functor.hpp  macros.hpp  offset.hpp  preprocessor.hpp  save_functor.hpp  set_byte_size_functor.hpp  set_instance_functor.hpp  short_vec_avx512_double_16.hpp  short_vec_avx512_double_32.hpp  short_vec_avx512_double_8.hpp  short_vec_avx512_float_16.hpp  short_vec_avx512_float_32.hpp  short_vec_avx512_int_16.hpp  short_vec_avx512_int_32.hpp  short_vec_avx_double_16.hpp  short_vec_avx_double_32.hpp  short_vec_avx_double_4.hpp  short_vec_avx_double_8.hpp  short_vec_avx_float_16.hpp  short_vec_avx_float_32.hpp  short_vec_avx_float_8.hpp  short_vec_avx_int_16.hpp  short_vec_avx_int_32.hpp  short_vec_avx_int_8.hpp  short_vec_helpers.hpp  short_vec_mic_double_16.hpp  short_vec_mic_double_32.hpp  short_vec_mic_double_8.hpp  short_vec_mic_float_16.hpp  short_vec_mic_float_32.hpp  short_vec_neon_float_16.hpp  (+44 more)
include/libflatarray/testbed/: benchmark.hpp  cpu_benchmark.hpp  evaluate.hpp  gpu_benchmark.hpp
lib/boost/boost/: config.hpp  cstdint.hpp
src/: aggregated_member_size.hpp  aligned_allocator.hpp  api_traits.hpp  coord.hpp  cuda_allocator.hpp  cuda_array.hpp  estimate_optimum_short_vec_type.hpp  flat_array.hpp  loop_peeler.hpp  macros.hpp  member_ptr_to_offset.hpp  number_of_members.hpp  preprocessor.hpp  short_vec.hpp  soa_accessor.hpp  soa_array.hpp  soa_grid.hpp  streaming_short_vec.hpp
src/detail/: construct_functor.hpp  copy_functor.hpp  destroy_functor.hpp  dual_callback_helper.hpp  generic_destruct.hpp  get_instance_functor.hpp  get_set_instance_functor.hpp  load_functor.hpp  load_save_functor.hpp  macros.hpp  offset.hpp  save_functor.hpp  set_byte_size_functor.hpp  set_instance_functor.hpp  short_vec_avx.hpp  short_vec_avx512_double_16.hpp  short_vec_avx512_double_32.hpp  short_vec_avx512_double_8.hpp  short_vec_avx512_float_16.hpp  short_vec_avx512_float_32.hpp  short_vec_avx512_int_16.hpp  short_vec_avx512_int_32.hpp  short_vec_avx_double_16.hpp  short_vec_avx_double_32.hpp  short_vec_avx_double_4.hpp  short_vec_avx_double_8.hpp  short_vec_avx_float_16.hpp  short_vec_avx_float_32.hpp  short_vec_avx_float_8.hpp  short_vec_avx_int_16.hpp  short_vec_avx_int_32.hpp  short_vec_avx_int_8.hpp  short_vec_helpers.hpp  short_vec_mic_double_16.hpp  short_vec_mic_double_32.hpp  short_vec_mic_double_8.hpp  short_vec_mic_float_16.hpp  short_vec_mic_float_32.hpp  short_vec_neon_float_16.hpp  short_vec_neon_float_32.hpp  (+42 more)
src/testbed/: benchmark.hpp  cpu_benchmark.hpp  evaluate.hpp  gpu_benchmark.hpp
test/: CMakeLists.txt  aligned_allocator_test.cpp  api_traits_test.cpp  cuda_allocator_test.cu  cuda_array_test.cu  estimate_optimum_short_vec_type_test.cpp  example_interface_test.cpp  example_jacobi.cpp  example_lbm.cu  loop_peeler_test.cpp  macros_test.cpp  preprocessor_test.cpp  short_vec_additional_test.cpp  short_vec_test.cpp  soa_array_cuda_test.cu  soa_array_test.cpp  soa_grid_cuda_test.cu  soa_grid_test.cpp  soa_vector_test.cpp  streaming_short_vec_test.cpp  test.h  test.hpp
